Minor mobile UI improvements

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -86,7 +86,7 @@
                 </li>
                 <li class="card">
                     <h3>Game development</h3> 
-                    <p>Unity and Godot are my main game engines, with some experience in GScript</p>
+                    <p>Unity and Godot are my main game engines, with some experience in GDScript</p>
                 </li>
             </ul>
         </div>
