--- a/_sass/about.scss
+++ b/_sass/about.scss
@@ -39,7 +39,7 @@
             .card {
                 display: flex;
                 flex-direction: column;
-                margin-bottom: $card-gap;
+                margin-bottom: calc($card-gap / 2);
                 padding: $card-padding;
             
                 border-radius: $small-radius;
