--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,17 @@
 <header role="banner">
   <input type="checkbox" id="nav-trigger" class="nav-trigger" />
   <label for="nav-trigger">
-    <span class="menu-icon">
-      <svg viewBox="0 0 18 15" width="18px" height="15px">
-        <path d="M18,1.484c0,0.82-0.665,1.484-1.484,1.484H1.484C0.665,2.969,0,2.304,0,1.484l0,0C0,0.665,0.665,0,1.484,0 h15.032C17.335,0,18,0.665,18,1.484L18,1.484z M18,7.516C18,8.335,17.335,9,16.516,9H1.484C0.665,9,0,8.335,0,7.516l0,0 c0-0.82,0.665-1.484,1.484-1.484h15.032C17.335,6.031,18,6.696,18,7.516L18,7.516z M18,13.516C18,14.335,17.335,15,16.516,15H1.484 C0.665,15,0,14.335,0,13.516l0,0c0-0.82,0.665-1.483,1.484-1.483h15.032C17.335,12.031,18,12.695,18,13.516L18,13.516z"/>
-      </svg>
-    </span>
+    <svg class="ham hamRotate ham8" viewBox="0 0 100 100" width="58" onclick="this.classList.toggle('active')">
+      <path
+            class="line top"
+            d="m 30,33 h 40 c 3.722839,0 7.5,3.126468 7.5,8.578427 0,5.451959 -2.727029,8.421573 -7.5,8.421573 h -20" />
+      <path
+            class="line middle"
+            d="m 30,50 h 40" />
+      <path
+            class="line bottom"
+            d="m 70,67 h -40 c 0,0 -7.5,-0.802118 -7.5,-8.365747 0,-7.563629 7.5,-8.634253 7.5,-8.634253 h 20" />
+    </svg>
   </label>
   <div class="site-header">
     {%- assign default_paths = site.pages | map: "path" -%}
