--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -33,10 +33,10 @@
 @include media-query($on-palm) {
   label[for="nav-trigger"] {
     position: absolute;
-    top: 10px;
-    right: 10px;
-    width: 36px;
-    height: 36px;
+    top: 0;
+    right: 8px;
+    width: 58px;
+    height: 58px;
     z-index: 2;
     cursor: pointer;
 
