Fixed profile icon margins Fixed the profile icon margins in the mobile view.

--- a/_sass/bento.scss
+++ b/_sass/bento.scss
@@ -158,6 +158,7 @@
           text-align: center;
         }
         img {
+          margin: 0;
           width: $card-size-mobile * 2;
           //height: $card-size-mobile;
         }
