--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header role="banner">
   <input type="checkbox" id="nav-trigger" class="nav-trigger" />
   <label for="nav-trigger">
-    <svg class="ham hamRotate ham8" viewBox="0 0 100 100" width="58" onclick="this.classList.toggle('active')">
+    <svg class="ham hamRotate" viewBox="0 0 100 100" width="58" onclick="this.classList.toggle('active')">
       <path
             class="line top"
             d="m 30,33 h 40 c 3.722839,0 7.5,3.126468 7.5,8.578427 0,5.451959 -2.727029,8.421573 -7.5,8.421573 h -20" />
