--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -10,5 +10,13 @@ layout: default
   <div class="work-content">
     {{ content }}
   </div>
+  {% if page.title != "Works"  %}
+  <a id="top-link" class="top-link" href="#top" title="Go to top">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 6" fill="currentColor">
+      <path d="M12 6H0l6-6z"></path>
+    </svg>
+  </a>
+  <script src="{{ base.url | prepend: site.url }}/assets/js/scroll.js"></script>
+  {% endif %}
 
 </div>
