--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -391,6 +391,25 @@
   @include relative-font-size(1.5);
 }
 
+.top-link {
+  visibility: hidden;
+  position: fixed;
+  bottom: 60px;
+  right: 30px;
+  z-index: 99;
+  background: $card-color;
+  color: $grey-color !important;
+  width: 48px;
+  height: 48px;
+  padding: 12px;
+  border-radius: 64px;
+  transition: visibility .5s,opacity .8s linear;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
 
 
 /**
